Migrate java version to 11